--- a/app/src/main/res/layout/item_simple.xml
+++ b/app/src/main/res/layout/item_simple.xml
@@ -6,9 +6,11 @@
 
     <TextView
         android:id="@+id/textview"
-        android:layout_width="wrap_content"
+        android:layout_width="65dp"
         android:layout_height="wrap_content"
+        android:background="@mipmap/grey_cicle"
         android:gravity="center"
-        android:background="@mipmap/cycle"
-        android:text="app_name" />
+        android:maxLength="8"
+        android:maxLines="2"
+        android:text="app_nameasdfafsfafasdfafd" />
 </LinearLayout>
